# todo-app-api

./: .env  Makefile  README.md  api.yml  docker-compose.yml  run_db.sh  run_db_docker.sh  setup
api/: .env  .env.sample  Cargo.toml  Makefile  build.sh  openapi.yaml
api/migrations/2022-07-25-034345_tasks/: up.sql
api/src/: core.rs  main.rs  schema.rs
api/src/core/: modules.rs
api/src/core/controller/: task_controller.rs
api/src/core/dto/: task.rs
api/src/core/entity/: task.rs
api/src/core/modules/: connection.rs  errors.rs
api/src/core/modules/errors/: task_error.rs
api/src/core/repository/: task_repository.rs
api/src/core/service/: task_service.rs
docker/: rust.Dockerfile
init.d/: task.sql
load-test/: create_task.js  get_task.js  result.md
