[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-cors = "0.6.1"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
bcrypt = "0.13"
derive_more = "0.99.17"
env_logger = "0.8"
log = "0.4"
